# SoapySDR-hs

./: .gitignore  README.md  SoapySDR-hs.cabal  flake.nix  pre-commit.sh
bindings/SoapySDR/: Bindings.hs
bindings/SoapySDR/Bindings/: FunPtr.hs  Safe.hs  Unsafe.hs
src/: SoapySDR.hs
